5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1596_842.log
== TEST (2019-03-21 19:50:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

valor = float(input("Digite um numero de 4 digitos: "))
print(valor)

-- OUTPUT:
9173.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:50:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

valor = float(input("Digite um numero de 4 digitos: "))
print(valor)

-- OUTPUT:
9173.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:52:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

valor = float(input("Digite um numero de 4 digitos: "))
print(valor/4)

-- OUTPUT:
2293.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:52:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

valor = float(input("Digite um numero de 4 digitos: "))
print(valor3425%)

-- ERROR:
File "XXXX", line 6
    print(valor3425%)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:53:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

valor = float(input("Digite um numero de 4 digitos: "))
soma = valor // // // //
print(valor) 


-- ERROR:
File "XXXX", line 6
    soma = valor // // // //
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:53:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

valor = float(input("Digite um numero de 4 digitos: "))
soma = valor//
print(valor) 


-- ERROR:
File "XXXX", line 6
    soma = valor//
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:54:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

valor = float(input("Digite um numero de 4 digitos: "))
soma = valor(x//y//z//k)
print(valor) 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    soma = valor(x//y//z//k)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:54:16) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

valor = float(input("Digite um numero de 4 digitos: "))
soma = valor(x//y//z//k)
print(valor) 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    soma = valor(x//y//z//k)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:59:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

valor = float(input("Digite um numero de 4 digitos: "))
x = valor//1000
y = valor//100
z = valor//10
k = valor%10
soma = x+y_z+k
print(soma) 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    soma = x+y_z+k
NameError: name 'y_z' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:59:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

valor = float(input("Digite um numero de 4 digitos: "))
x = valor//1000
y = valor//100
z = valor//10
k = valor%10
soma = x+y+z+k
print(soma) 


-- OUTPUT:
1020.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:59:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

valor = float(input("Digite um numero de 4 digitos: "))
x = valor//1000
y = valor//100
z = valor//10
k = valor%10
soma = x+y+z+k
print(soma) 


-- EXECUTION TIME:
0.205289
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
1020.0
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
112.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:59:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

valor = float(input("Digite um numero de 4 digitos: "))
x = valor//1000
y = valor//100
z = valor//10
k = valor%10
soma = x+y+z+k
print(soma) 


-- OUTPUT:
1020.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:00:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

valor = float(input("Digite um numero de 4 digitos: "))
x = valor//1000.
y = valor//100.
z = valor//10.
k = valor%10.
soma = x+y+z+k
print(soma) 


-- OUTPUT:
1020.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 20:00:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

valor = float(input("Digite um numero de 4 digitos: "))
x = valor//1000.
y = valor//100.
z = valor//10.
k = valor%10.
soma = x+y+z+k
print(soma) 


-- EXECUTION TIME:
0.168588
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
1020.0
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
112.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:00:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

valor = float(input("Digite um numero de 4 digitos: "))
x = valor//1000.
y = valor//100.
z = valor//10.
k = valor%10.
soma = x+y+z+k
print(soma) 


-- OUTPUT:
1020.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:02:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

valor = int(input("Digite um numero de 4 digitos: "))
x = int(valor//1000)
y = int(valor//100)
z = int(valor//10)
k = int(valor%10)
soma = x+y+z+k
print(soma) 


-- OUTPUT:
1020
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 20:02:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

valor = int(input("Digite um numero de 4 digitos: "))
x = int(valor//1000)
y = int(valor//100)
z = int(valor//10)
k = int(valor%10)
soma = x+y+z+k
print(soma) 


-- EXECUTION TIME:
0.143754
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
1020
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
112
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:02:15) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

valor = int(input("Digite um numero de 4 digitos: "))
x = int(valor//1000)
y = int(valor//100)
z = int(valor//10)
k = int(valor%10)
soma = x+y+z+k
print(soma) 


-- OUTPUT:
1020
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 20:02:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

valor = int(input("Digite um numero de 4 digitos: "))
x = int(valor//1000)
y = int(valor//100)
z = int(valor//10)
k = int(valor%10)
soma = x+y+z+k
print(soma) 
3141

-- EXECUTION TIME:
0.137704
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
1020
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
112
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:02:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

valor = int(input("Digite um numero de 4 digitos: "))
x = int(valor//1000)
y = int(valor//100)
z = int(valor//10)
k = int(valor%10)
soma = x+y+z+k
print(soma) 
3141

-- OUTPUT:
1020
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:02:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

valor = int(input("Digite um numero de 4 digitos: "))
x = int(valor//1000)
y = int(valor//100)
z = int(valor//10)
k = int(valor%10)
soma = x+y+z+k
print(soma) 

-- OUTPUT:
1020
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:05:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

valor = int(input("Digite um numero de 4 digitos: "))
x = int(valor//1000)
y = int(%valor//100)
z = int(valor//10)
k = int(valor%10)
soma = x+y+z+k
print(soma) 

-- ERROR:
File "XXXX", line 7
    y = int(%valor//100)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:07:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

valor = int(input("Digite um numero de 4 digitos: "))
x = int(valor%1000)
y = int(valor%100)
z = int(valor%10)
k = int(valor%1)
soma = x+y+z+k
print(soma) 

-- OUTPUT:
249
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:08:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

valor = int(input("Digite um numero de 4 digitos: "))
x = int(valor//1000%100%10)
y = int(valo//100%10)
z = int(valo//10)
k = int(valor%10)
soma = x+y+z+k
print(soma) 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    y = int(valo//100%10)
NameError: name 'valo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:08:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

valor = int(input("Digite um numero de 4 digitos: "))
x = int(valor//1000%100%10)
y = int(valor//100%10)
z = int(valor//10)
k = int(valor%10)
soma = x+y+z+k
print(soma) 

-- OUTPUT:
930
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:08:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

valor = int(input("Digite um numero de 4 digitos: "))
x = int(valor//1000%100%10)
y = int(valor//100%10)
z = int(valor//10%10)
k = int(valor%10)
soma = x+y+z+k
print(soma) 

-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 20:08:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

valor = int(input("Digite um numero de 4 digitos: "))
x = int(valor//1000%100%10)
y = int(valor//100%10)
z = int(valor//10%10)
k = int(valor%10)
soma = x+y+z+k
print(soma) 

-- EXECUTION TIME:
0.122193
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
